# snake-server

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile
src/: [core_loader].hpp  snake-server.cpp  snake_server.cpp
src/components/mysql/: [auto_loader].cpp  connector.cpp  connector.hpp
src/components/mysql/interface/: connector.hpp
src/servers/websocket/: [auto_loader].cpp  client.hpp  headers.hpp  message.hpp  server.cpp  server.hpp
src/servers/websocket/interfaces/: server.hpp
src/services/game/: [auto_loader].cpp  controller.cpp  controller.hpp  game_server.cpp  game_server.hpp
src/services/game/interfaces/: common.hpp  controller.hpp  game_server.hpp
src/services/player_session/: [auto_loader].cpp  controller.cpp  controller.hpp  player.cpp  player.hpp
src/services/player_session/interfaces/: common.hpp  controller.hpp  player.hpp
src/services/player_session/interfaces/models/: [base].hpp  player.hpp
src/services/player_session/models/: [base].hpp  player.cpp  player.hpp
src/services/player_session/requests/: [requests_loader].hpp  connect_udp.cpp  connect_udp.hpp  leaderboard.cpp  leaderboard.hpp  login.cpp  login.hpp  register.cpp  register.hpp  stats.cpp  stats.hpp
